<resources>
    <string name="app_name">GameGuesser</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_encyclopedia">Encyclopedia</string>
    <string name="title_chatbot">Chatbot</string>
    <string name="title_settings">Settings</string>
    <string name="server_client_id">631177841661-nqjjhb58th6a55vsadrqg3u9i3oouihn.apps.googleusercontent.com</string>
</resources>
