<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.gameguesser.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.gameguesser.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.gameguesser.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_chatbot"
        android:name="com.example.gameguesser.ui.chatbot.ChatbotFragment"
        android:label="@string/title_chatbot"
        tools:layout="@layout/fragment_chatbot" />

    <fragment
        android:id="@+id/navigation_encyclopedia"
        android:name="com.example.gameguesser.ui.encyclopedia.EncyclopediaFragment"
        android:label="@string/title_encyclopedia"
        tools:layout="@layout/fragment_encyclopedia" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.gameguesser.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/keyGameFragment"
        android:name="com.example.gameguesser.ui.keyWordGame.KeyGameFragment"
        android:label="Keyword Game"
        tools:layout="@layout/fragment_key_game" />

    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.example.gameguesser.ui.settings.EditProfileFragment"
        android:label="Edit Profile" />

    <fragment
        android:id="@+id/deleteAccountFragment"
        android:name="com.example.gameguesser.ui.settings.DeleteAccountFragment"
        android:label="Delete Account" />

    <fragment
        android:id="@+id/helpFragment"
        android:name="com.example.gameguesser.ui.settings.HelpFragment"
        android:label="Help Page" />

    <fragment
        android:id="@+id/termsFragment"
        android:name="com.example.gameguesser.ui.settings.TermsFragment"
        android:label="Terms and conditions page" />

    <fragment
        android:id="@+id/languageFragment"
        android:name="com.example.gameguesser.ui.settings.LanguagesFragment"
        android:label="languages page" />

</navigation>
